# DiskANN3-REST

./: Cargo.toml  README.md  serve_temp.json
client/: Cargo.toml
client/src/: main.rs
serve/: Cargo.toml
serve/src/: inputs.rs  lib.rs  loader.rs  serve.rs
